# astrok

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: appointments.py  assistant.py  auth.py  clients.py  dashboard.py  deps.py  measurements.py  par_q.py  plans.py  routes.py  sessions.py  trainers.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  appointment.py  client_measurement.py  par_q_assessment.py  plan.py  plan_version.py  trainer_unavailability.py  user.py  user_relation.py  workout_session.py
backend/app/schemas/: appointment.py  auth.py  client.py  dashboard.py  measurement.py  par_q.py  plan.py  plan_coach.py  trainer.py  trainer_unavailability.py  user.py  workout_session.py
backend/app/services/: ai_agent.py  coach.py  history.py  plan_coach.py  storage.py
database/: schema.sql
docs/: ai-agent-design.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/modules/appointments/: AppointmentsModule.tsx
frontend/src/modules/auth/: LoginModule.tsx
frontend/src/modules/clients/: AddPlanForm.tsx  ClientDetailModule.tsx  ClientHeaderActions.tsx  ClientNotesPanel.tsx  ClientsModule.tsx  HealthScreeningCard.tsx  MeasuresPanel.tsx  NewClientModule.tsx  PlanCoachPanel.tsx  PlanPanel.tsx  clientDetailUtils.ts
frontend/src/modules/dashboard/: ClientDashboardModule.tsx  DashboardModule.tsx
frontend/src/modules/health/: ParQModule.tsx
(+5 files in other folders)
