[project]
name = "gym-ai-backend"
version = "0.1.0"
description = "FastAPI backend for gym appointments, routines, and AI assistant workflows."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
    "email-validator>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<4.1",
    "PyJWT>=2.10.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
